--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -11,7 +11,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DataWriter.c">
+    <ClCompile Include="Game.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
